--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,9 @@
       "@/*": ["src/*"]
     }
   },
+  "include": [
+    "src",
+    "src/**/*.d.ts"
+  ],
   "exclude": ["node_modules", "dist", "release"]
 }
