added layout functionlaity and filter functionality in frontend.

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "electron-store": "^8.1.0",
     "electron-updater": "^6.1.7",
     "lucide-react": "^0.562.0",
+    "react-router-dom": "^7.11.0",
     "sharp": "^0.33.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
